--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -10,3 +10,10 @@ h1, h3, h5{
     text-align: center;
 }
 
+.image{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
