end of day finale

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -2,3 +2,11 @@
     justify-content: center;
     display: flex;
 }
+
+body {
+    background: url("https://cdn.firespring.com/images/5dd63510-afea-4923-89ef-705b4f2f1772.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+  }
