got the users attending to print, working on getting the button to post the user to it

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -3,10 +3,10 @@
     display: flex;
 }
 
-body {
+/* body {
     background: url("https://cdn.firespring.com/images/5dd63510-afea-4923-89ef-705b4f2f1772.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 
-  }
+  } */
